--- a/src/app/components/detail-news/detail-news.component.html
+++ b/src/app/components/detail-news/detail-news.component.html
@@ -1,3 +1,6 @@
-<p>
-  detail-news works!
-</p>
+
+<p>Keine weiteren Informationen verfügbar.</p>
+
+<h1>{{ newsData[0].title }}</h1>
+<p [innerHTML]="newsData[0].body"></p>
+
