--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,19 @@
+<h2>Angemeldete Kurstermine</h2>
+
+<br>
 <h2>News</h2>
 <div *ngIf="news.length == 0">
   Keine neuen Nachrichten vorhanden.
 </div>
 <div *ngIf="news.length > 0">
   <div *ngFor="let newsentry of news">
-    {{ newsentry.title }}
+    <h4>{{ newsentry.title }} </h4>
+    <p [innerHTML]="newsentry.body"></p>
+    <a routerLink="/detail-news/{{ newsentry.nid }}">Link zur News</a>
   </div>
 </div>
 
+<br>
 <div *ngIf="topcourses.length > 0">
   <h2>Topkurse</h2>
   <div *ngFor="let course of topcourses">
