--- a/src/app/components/overview-kategories/overview-kategories.component.html
+++ b/src/app/components/overview-kategories/overview-kategories.component.html
@@ -1,3 +1,10 @@
-<p>
-  overview-kategories works!
-</p>
+<div *ngIf="kategories.length > 0">
+  <h2>Kategorien</h2>
+  <div *ngFor="let course of kategories">
+    <a routerLink="/overview-kurse/{{ course.nid }}">{{course.title}}</a>
+    <p [innerHTML]="course.body"></p>
+  </div>
+</div>
+
+
+
