--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col-3">
     <nav id="main-navigation">
+      <a routerLink="/home">Homepage</a>  <br>
       <a routerLink="/overview-categories">Übersichtsseite Kategorien</a>
     </nav>
     </div>
