--- a/src/app/components/detail-kurs/detail-kurs.component.html
+++ b/src/app/components/detail-kurs/detail-kurs.component.html
@@ -1,9 +1,18 @@
-<h1>{{ courseData[0].title }}</h1>
-<p [innerHTML]="courseData[0].body"></p>
 
-<h2>Termine</h2>
+<div *ngIf="courseData[0] === undefined">
+  <p [innerHTML]="'Dieser Kurs findet momentan leider nicht statt.'"></p>
+</div>
+<div *ngIf="courseData[0].body.length > 0">
+  <h1>{{ courseData[0].title }}</h1>
+  <p [innerHTML]="courseData[0].body"></p>
+</div>
+
+<h2>Termine:</h2>
+-<br>
 <div *ngFor="let courseDate of courseData" style="margin-bottom: 25px;">
-  Schwierigkeitslevel: {{ courseDate.field_schwierigkeitslevel }}
+  Wochentag: {{ courseDate.field_wochentag }}
   <br>
   Zeitraum: {{ courseDate.field_uhrzeit_beginn }} - {{ courseDate.field_uhrzeit_ende }}
+  <br>
+  Ort: {{courseDate.field_ort}}
 </div>
