overview-week implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <div class="col-3">
     <nav id="main-navigation">
       <a routerLink="/home">Homepage</a>  <br>
-      <a routerLink="/overview-categories">Übersichtsseite Kategorien</a>
+      <a routerLink="/overview-categories">Übersichtsseite Kategorien</a> <br>
+      <a routerLink="/overview-week">Übersichtsseite Wochentage</a> <br>
     </nav>
     </div>
 
