--- a/src/app/components/overview-week/overview-week.component.html
+++ b/src/app/components/overview-week/overview-week.component.html
@@ -1,3 +1,7 @@
-<p>
-  overview-week works!
-</p>
+<div *ngIf="weekdays.length > 0">
+  <h2>Kurse nach Wochentag</h2>
+  <div *ngFor="let day of weekdays">
+    <a routerLink="/overview-kurseamwochentag/{{ day.nid }}">{{day.title}}</a>
+    <p [innerHTML]="day.body"></p>
+  </div>
+</div>
