courses per weekday implemented

--- a/src/app/components/overview-kurse/overview-kurse.component.html
+++ b/src/app/components/overview-kurse/overview-kurse.component.html
@@ -1,7 +1,7 @@
 <!--<h1>{{ kategorieData[0].title }}</h1>
 <p [innerHTML]="kategorieData[0].body"></p>-->
 
-<h2>Verfügbare Sportarten</h2>
+<h2>Verfügbare Kurse</h2>
 <br>
 <div *ngFor="let courses of kategorieData" style="margin-bottom: 25px;">
   <h4>{{courses.title}}</h4>
