--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
 
   <div class="row">
     <div class="col-3">
-    <nav id="main-navigation">
-      <a routerLink="/home">Homepage</a>  <br>
-      <a routerLink="/overview-categories">Übersichtsseite Kategorien</a> <br>
-      <a routerLink="/overview-week">Übersichtsseite Wochentage</a> <br>
+    <nav id="main-navigation"> <br>
+      <a routerLink="/home">Homepage</a>  <br><br>
+      <a routerLink="/overview-categories">Übersichtsseite Kategorien</a> <br><br>
+      <a routerLink="/overview-week">Übersichtsseite Wochentage</a> <br><br>
     </nav>
     </div>
 
