--- a/src/app/components/overview-kurseamwochentag/overview-kurseamwochentag.component.html
+++ b/src/app/components/overview-kurseamwochentag/overview-kurseamwochentag.component.html
@@ -4,5 +4,7 @@
   <h4>{{courses.field_kursverknuepfung}}</h4>
   ID: {{courses.nid}}
   <br>
+  Zeitpunkt: {{courses.field_uhrzeit_beginn}} bis {{courses.field_uhrzeit_ende}}
+  <br>
   <a routerLink="/detail-kurs/{{ courses.nid }}">Link zum Kurs</a>
 </div>
