LocalStorage v1.0 implemented (add and remove courses now fully working)

--- a/src/app/components/anmeldungsliste/anmeldungsliste.component.html
+++ b/src/app/components/anmeldungsliste/anmeldungsliste.component.html
@@ -1,11 +1,15 @@
-
 <ul *ngFor='let anmeldung of anmeldungen | keyvalue'>
       <div *ngFor='let obj of anmeldung.value'>
-        <li><b>{{ obj.Name }}: </b>{{obj.Start}} bis {{obj.Ende}}</li>
+        <!--<div *ngIf="((anmeldung.value).length == 0)">
+          <b><i>Du bist aktuell zu keinem Kurs angemeldet.</i></b>
+
+        <div *ngIf="((anmeldung.value).length > 0)">        </div>-->
+        <li><b>{{ obj.Name }}: </b> {{obj.Tag}}s von {{obj.Start}} bis {{obj.Ende}}</li>
         <ul>
         <li>Ort: {{obj.Ort}}</li>
         <li><a routerLink="/detail-kurs/{{ obj.ID }}">Link zum Kurs und zur An- und Abmeldung</a></li>
         </ul>
         <br>
+        <!---</div>-->
   </div>
 </ul>
