--- a/src/app/components/detail-kurs/detail-kurs.component.html
+++ b/src/app/components/detail-kurs/detail-kurs.component.html
@@ -16,7 +16,7 @@
   <br>
   Ort: {{courseDate.field_ort}}
   <br>
-  <button (click)="anmelden($event, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende ,courseDate.field_ort)">Anmelden</button>
-  <button (click)="abmelden()">Abmelden</button>
+  <button (click)="anmelden($event, courseDate.field_wochentag, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende ,courseDate.field_ort)">Anmelden</button>
+  <button (click)="abmelden($event, courseDate.field_wochentag, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende ,courseDate.field_ort)">Abmelden</button>
   {{anmeldungen}}
 </div>
