--- a/src/app/components/detail-news/detail-news.component.html
+++ b/src/app/components/detail-news/detail-news.component.html
@@ -1,6 +1,11 @@
+<div *ngIf="newsData === undefined">
+  <br><br>
+  <h4><i>Keine weiteren Informationen verfügbar.</i></h4>
+</div>
 
-<p>Keine weiteren Informationen verfügbar.</p>
-
-<h1>{{ newsData[0].title }}</h1>
-<p [innerHTML]="newsData[0].body"></p>
+<div *ngIf="newsData !== undefined">
+  <br>
+  <h1>{{ newsData[0].title }}</h1>
+  <p [innerHTML]="newsData[0].body"></p>
+</div>
 
