--- a/src/app/components/detail-kurs/detail-kurs.component.html
+++ b/src/app/components/detail-kurs/detail-kurs.component.html
@@ -1,14 +1,16 @@
-
-<div *ngIf="courseData[0] === undefined">
-  <p [innerHTML]="'Dieser Kurs findet momentan leider nicht statt.'"></p>
+<div *ngIf="courseData.length == 0">
+  <br><br>
+  <h4><i>Dieser Kurs findet momentan leider nicht statt.</i></h4>
 </div>
 <div *ngIf="courseData[0].body.length > 0">
+  <br>
   <h1>{{ courseData[0].title }}</h1>
   <p [innerHTML]="courseData[0].body"></p>
 </div>
 
+
+<div *ngIf="courseData.length != 0">
 <h2>Termine:</h2>
--<br>
 <div *ngFor="let courseDate of courseData" style="margin-bottom: 25px;">
   Wochentag: {{ courseDate.field_wochentag }}
   <br>
@@ -16,7 +18,12 @@
   <br>
   Ort: {{courseDate.field_ort}}
   <br>
-  <button (click)="anmelden($event, courseDate.field_wochentag, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende ,courseDate.field_ort)">Anmelden</button>
-  <button (click)="abmelden($event, courseDate.field_wochentag, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende ,courseDate.field_ort)">Abmelden</button>
-  {{anmeldungen}}
+  <div *ngIf="(data === null) || (data.indexOf('&#34;Name&#34;:&#34;' + courseData[0].title + '&#34;,&#34;ID&#34;:&#34;' + courseData[0].nid + '&#34;,&#34;Tag&#34;:&#34;' + courseDate.field_wochentag + '&#34;,&#34;Start&#34;:&#34;' + courseDate.field_uhrzeit_beginn + '&#34;,&#34;Ende&#34;:&#34;' + courseDate.field_uhrzeit_ende + '&#34;,&#34;Ort&#34;:&#34;' + courseDate.field_ort + '&#34;') === -1)">
+  <button (click)="anmelden($event, courseDate.field_wochentag, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende, courseDate.field_ort)">Anmelden</button>
+  </div>
+  <div *ngIf="(data !== null) && (data.indexOf('&#34;Name&#34;:&#34;' + courseData[0].title + '&#34;,&#34;ID&#34;:&#34;' + courseData[0].nid + '&#34;,&#34;Tag&#34;:&#34;' + courseDate.field_wochentag + '&#34;,&#34;Start&#34;:&#34;' + courseDate.field_uhrzeit_beginn + '&#34;,&#34;Ende&#34;:&#34;' + courseDate.field_uhrzeit_ende + '&#34;,&#34;Ort&#34;:&#34;' + courseDate.field_ort + '&#34;') !== -1)">
+    <button (click)="abmelden($event, courseDate.field_wochentag, courseDate.field_uhrzeit_beginn, courseDate.field_uhrzeit_ende, courseDate.field_ort)">Abmelden</button>
+  </div>
+    {{anmeldungen}}
+</div>
 </div>
