--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
+<br>
 <h2>Angemeldete Kurstermine</h2>
 <app-anmeldungsliste></app-anmeldungsliste>
 <br>
@@ -9,19 +10,23 @@
   <div *ngFor="let newsentry of news">
     <h4>{{ newsentry.title }} </h4>
     <p [innerHTML]="newsentry.body"></p>
-    <a routerLink="/detail-news/{{ newsentry.nid }}">Link zur News</a>
+    <a routerLink="/detail-news/{{ newsentry.nid }}">Weitere Informationen</a>
     <br><br>
   </div>
 </div>
 
 <br>
+<h2>Topkurse</h2>
+<div *ngIf="topcourses.length == 0">
+  Aktuell gibt es leider keine Topkurse.
+</div>
 <div *ngIf="topcourses.length > 0">
-  <h2>Topkurse</h2>
   <div *ngFor="let course of topcourses">
     <h3>{{ course.title }}</h3>
     ID: {{ course.nid }}
 
-    <a routerLink="/detail-kurs/{{ course.nid }}">Link zum Topkurs</a>
+    <a routerLink="/detail-kurs/{{ course.nid }}">Weitere Informationen</a>
     <p [innerHTML]="course.body"></p>
+    <br>
   </div>
 </div>
