--- a/src/app/components/anmeldungsliste/anmeldungsliste.component.html
+++ b/src/app/components/anmeldungsliste/anmeldungsliste.component.html
@@ -18,6 +18,6 @@
   </div>
 </ul>
   <div *ngIf="anmeldungen[0].length >= 2">
-  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button mat-raised-button color="warn" matTooltip="Diese Aktion kann nicht rückgängig gemacht werden" (click)="clear()">Von allen Kursen abmelden</button><br><br><br>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="logout" mat-raised-button color="warn" matTooltip="Diese Aktion kann nicht rückgängig gemacht werden" (click)="clear()">Von allen Kursen abmelden</button><br><br><br>
 </div>
 </div>
